fix image not fit issue for timeline viewer page

--- a/Reddah.Ionic5/src/app/mytimeline/tsviewer/tsviewer.page.scss
+++ b/Reddah.Ionic5/src/app/mytimeline/tsviewer/tsviewer.page.scss
@@ -82,6 +82,7 @@
    top:50%;
    transform: translateY(-50%);
    object-fit: cover;
+   min-height: 100%;
 }
 
 .container3 {
